[metadata]
name = rp2daq
version = 1.0.0
author = Filip Dominec 
author_email = Filip.Dominec@gmail.com
description = Raspberry Pi Pico as universal platform for data acquisition, motor control etc. A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FilipDominec/rp2daq
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    matplotlib==3.7.1
    numpy==1.24.0
    pyserial==3.5
